crates/toml/tests/snapshots/invalid/table/newline-05.stderr
TOML parse error at line 1, column 5
  |
1 | [tbl
  |     ^
unclosed table, expected `]`

---
TOML parse error at line 2, column 5
  |
2 | .sub]
  |     ^
missing value for key, expected `=`

---
TOML parse error at line 2, column 1
  |
2 | .sub]
  | ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
